kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: companies-deployment
  labels:
    app: companies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: companies
  template:
    metadata:
      labels:
        app: companies
    spec:
      containers:
      - name: companies-api
        image: companies-api
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /hc
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
