kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: companies-service
spec:
  type: NodePort
  selector:
    app: companies
  ports:
    - port: 3000
      nodePort: 30000
