kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: companies-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: companies-ip
  labels:
    app: companies
    
spec:
  rules:
    - host: companies.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
